// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthGenesisVault can deposit through receive fallback function 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 74334,
}
`;

exports[`EthGenesisVault migrate migrates from rewardEthToken 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 79584,
}
`;

exports[`EthGenesisVault pulls withdrawals on claim exited assets 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 77160,
}
`;

exports[`EthGenesisVault pulls withdrawals on multiple validators registration 1`] = `
Object {
  "calldataByteLength": 3748,
  "gasUsed": 649263,
}
`;

exports[`EthGenesisVault pulls withdrawals on single validator registration 1`] = `
Object {
  "calldataByteLength": 1156,
  "gasUsed": 310166,
}
`;

exports[`EthGenesisVault update state deducts rewards on first state update 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 150251,
}
`;

exports[`EthGenesisVault update state skips updating legacy with zero total assets 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 145820,
}
`;

exports[`EthGenesisVault update state splits penalty between rewardEthToken and vault 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 119659,
}
`;

exports[`EthGenesisVault update state splits reward between rewardEthToken and vault 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 167351,
}
`;
